name:               exml
version:            0.0.1
license:            BSD3
license-file:       LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Copyright (C) 2013-2014 NICTA Limited
synopsis:           A library for using XML documents
category:           Development
description:       
  <<http://i.imgur.com/Ns5hntl.jpg>>
  .
  A representation of latitude and longitude
homepage:           https://github.com/NICTA/exml
bug-reports:        https://github.com/NICTA/exml/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:NICTA/exml.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                      base < 5 && >= 3
                    , bifunctors >= 4.1
                    , digit >= 0.1.1
                    , lens >= 4.0
                    , tagged >= 0.7
                    , transformers >= 0.3.0.0
                    , semigroups >= 0.15
                    , semigroupoids >= 4.2
                    , xml >= 1.3
                    , void >= 0.6
                    
  ghc-options:
                    -Wall

  default-extensions:
                      NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Xml
                    Data.Xml.Parser

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                      base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
